rebbet mqda oldingi holat
